test_dataset/bad/open_redirection/open_redirection1_bad.java
// https://github.com/securitycipher/vulnerable-code-snippet/blob/main/Open%20Redirection.md

String redirectUrl = request.getParameter("url");
response.sendRedirect(redirectUrl);
